local-fmt/tests/ui/gen_static_message/missmatch_placeholder.rs
use local_fmt::{gen_static_message, StaticMessage};

const _: StaticMessage<1> = gen_static_message!("Hello!");

fn main() {}
